--- a/trunk/csiebug-2.0/src/MessageResources.properties
+++ b/trunk/csiebug-2.0/src/MessageResources.properties
@@ -165,6 +165,7 @@ systemAdmin.CodeValue=代碼值
 systemAdmin.AddCode=新增代碼
 systemAdmin.AddCodeType=新增代碼類別
 systemAdmin.CancelEditCode=取消編輯代碼
+systemAdmin.cannotDeleteThisRole=系統保留角色，不可刪除！
 
 personalSetting.FunctionName=個人資訊管理
 personalSetting.MajorEmail=主要電子郵件
