--- a/trunk/csiebug-2.0/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/csiebug-2.0/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Wed Jun 29 15:15:44 CST 2011
+#Wed Jul 06 14:55:59 CST 2011
 eclipse.preferences.version=1
+encoding//WebContent/plupload/plupload.jsp=UTF-8
 encoding//WebContent/uploadify/uploadify.jsp=UTF-8
 encoding//src/MessageResources.properties=UTF-8
 encoding//src/MessageResources_en_US.properties=UTF-8
